--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
         <div class="about__container bd-grid">
           <div class="about__img">
-            <img src="assets/img/main.jpg" alt="" />
+            <img src="assets/img/abt.jpg" alt="" />
           </div>
 
           <div>
