--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <span class="home__title-color">Bhavika</span>
           </h1>
 
-          <a href="assets/Bhavika02 Resume.pdf" class="button" download
+          <a href="assets/Bhavika's_Resume.pdf" class="button" download
             >Download Resume</a
           >
         </div>
